hnfp/static/hnfp/css/style.css
/* ... */
.dashboard #map {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.alerts-wrap {
  position: relative;
}

#map-panel {
  background-color: #e4efee;
  padding: 1rem;
  width: 100%;
}

.SimpleLayerSwitcher {
  z-index: 0;
}

#survey-map-wrapper {
  display: block;
  height: 480px;
  position: relative;
  width: 100%;
}

#survey-map {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

#map div.olControlZoom {
  background: rgba(255,255,255,0.8);
  bottom: auto;
  right: 0;
  top: 0;
  padding: 0;
}

#map div.olControlZoom .olButton {
  display: inline-block;
  background: transparent;
  color: #000;
  font-size: 1em;
  height: auto;
  line-height: 2rem;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 2rem;
}

#map div.olControlZoom .olButton.olControlZoomOut {
  font-size: 1.5em;
}

.preloader-wrapper {
  display: block;
  margin: 0 auto;
}
.preloader-wrapper:not(.active) {
  height: 0;
}

.layer-switcher button,
#map .layer-switcher button {
  background-color: rgba(0,60,136,.5);
  background-image: url('/static/hnfp/img/icons/layers.png');
  background-size: 80%;
  background-position: 50%;
  height: 1.375em;
  width: 1.375em;
}

/*--------------------
  observations
  --------------------*/

#stepone, #steptwo, #stepthree, #stepchangeloc, #stepfour {
  display: none;
}

#stepone.visible, #steptwo.visible, #stepthree.visible, #stepchangeloc.visible, #stepfour.visible {
  display: block;
}

#new-observation.visible {
  display: block;
}

#new-observation {
  background: rgba(255,255,255,0.94);
  box-shadow: 0 0 6px #666;
  display: none;
  height: 48%;
  left: 5%;
  overflow: scroll;
  padding: 0;
  position: absolute;
  top: 47%;
  width: 90%;
}

  #new-observation.tall {
    height: 90%;
    top: 5%;
  }

  #new-observation.short {
    height: 30%;
    top: 65%;
  }

#new-observation .progress {
  margin: 0;
}

#new-observation form,
#new-observation input,
#new-observation label,
#new-observation textarea {
  color: #4d4d4e;
  margin: 0 0 1rem;
}

#new-observation textarea {
  height: 2rem;
  min-height: 2rem;
}

#new-observation #observation_location {
  background: transparent;
  color: #777;
  font-family: 'function', sans-serif;
}

#input-field-location .btn {
  box-shadow: none;
}

#new-observation h2 {
  color: #2b384a;
  line-height: 1;
  margin: 0 0 2rem;
  padding: 1rem 0;
  position: relative;
}

  #new-observation h2:after {
    bottom: -5px;
    border-bottom: 5px solid #2b384a;
    left: 40%;
    content: '';
    position: absolute;
    width: 20%;
  }

#new-observation input:not(.file-path),
#new-observation textarea {
//  background: #dfebea;
  color: #4d4d4e;
}

#new-observation input.file-path {
  margin-bottom: 0;
}

#new-observation label {
  text-indent: 4px;
}

#new-observation .btn:not(.small-btn) {
  font-size: 1.125em;
  line-height: 2.75rem;
}

.small-btn.btn {
  font-size: .8125em;
  line-height: 2.5rem;
  margin-bottom: 0;
  padding: 0 1rem;
}

.small-btn.btn-border-light-blue {
  font-size: .875em;
}

.small-btn.btn i {
  line-height: inherit;
}

.observations select.browser-default {
  background: #dfebea;
  color: #4d4d4e;
  font-family: 'function_bold', sans-serif;
}

#new-observation select.browser-default {
  background: transparent;
  color: #4d4d4e;
  margin: .75rem 0 .75rem;
  font-family: 'function', sans-serif;
}

#new-observation .select-icon {
  display: block;
  opacity: .8;
  pointer-events: none;
  position: absolute;
  right: 10px;
  top: 20px;
  z-index: 9;
}

.map-container,
#map-wrapper {
  height: 400px;
  max-height: 96vh;
}

.observations #map-wrapper {
  position: relative;
}

.observations #map {
  height: 100%;
}

.observations .collapsible {
  margin-bottom: 0;
}

.observations section:not(.section) .row {
  margin-bottom: 0;
}

.observations .blue_dark label {
  color: #2b384a;
}

  .observations .blue_dark input[type="checkbox"]:not(.filled-in) + label:before,
  .observations .blue_dark input[type="checkbox"]:not(.filled-in) + label:after,
  .observations .blue_dark input[type="checkbox"] + label:before,
  .observations .blue_dark input[type="checkbox"] + label:after {
    border: none;
    border-radius: 50%;
    background: rgba(43,56,74,0.2);
    color: #5d85b7;
  }

.add-btn i {
    font-size: 1em;
}

.observations .add-btn {
  line-height: 3rem;
}

.observations .select-wrapper .caret {
  color: #5d85b7;
}

.observations .select-wrapper .select-dropdown {
  border: none;
  color: #5d85b7;
  font-size: 1em;
  margin-bottom: 0;
}

.observations .collapsible {
  border: none;
  box-shadow: none;
}

.observations .collapsible li {
  margin: 0;
}

.observations .collapsible .collapsible-header {
  border: none;
  color: #5d85b7;
  display: inline-block;
  font-weight: 700;
}

  .observations .collapsible .collapsible-header.active {
    background: #e4efee;
  }

    .observations .collapsible .collapsible-header.active i {
      transform: rotate(90deg);
    }

.observations .collapsible .collapsible-body {
  background: #e4efee;
  padding: 1rem .5rem 0;
}

  .observations .collapsible .collapsible-body .row {
    margin-bottom: 0;
  }

  .observations .collapsible .collapsible-body .s6 {
    margin-bottom: 1rem;
  }

  .observations .collapsible .collapsible-body .flow-text {
    font-size: 1em;
  }


.relative.height .center .absolute {
  left: 25%;
  transition: (-50%,0);
  width: 50%;
}

.observations .toolbar.active ul {
  background-color: #fff;
  z-index: 1;
}

.observations .switch {
  margin: 1.5rem 0;
}

.relative.height ul img {
  height: 100%;
  max-width: 100%;
}

.file-path-wrapper {}

.file-path-wrapper input {
  font-size: .8125em;
}

/*--------------------
  Forum
  --------------------*/
.forum h4 {
  font-size: 2em;
}

.forum p {
  font-size: 1.25em;
}

/*--------------------
  survey
  --------------------*/

.survey-intro h2 {
  margin: 0;
}

.row-icon {
  max-width: 60px;
}

.border-survey-wrap {
  border-bottom: 3px solid #2b384a;
}
/* ... */

